# AI-PRO

./: .editorconfig  .gitcliff.toml  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint  AI2.txt  ARCHITECTURE.md  AUTOMATION_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  SELF_LEARNING_GUIDE.md  VSCODE_SETUP.md  automation_policy.yaml  codecov.yml  mcp.json  pyproject.toml  roadmap.yaml  казать публичный ключ (скопируй ВСЮ строку, начиная с 'ssh-ed25519')  казать публичный ключ (скопируй ВСЮ строку, начиная с 'ssh-ed25519').pub
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  COPILOT_INSTRUCTIONS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent_task.yml  bug_report.yml  feature_request.yml
.github/agents/: README.md
.github/chatmodes/: 1.chatmode.md
.github/workflows/: auto-label.yml  auto-merge.yml  changelog.yml  ci-full.yml  ci.yml  codeql.yml  git add .pre-commit-config.yaml  nightly.yml  release.yml  semantic-pr.yml  version-check.yml
DECISIONS/: ADR-0001-initial-architecture.md  ADR-0002-self-learning-performance.md
autonomous_dev/: __init__.py  learning.py  py.typed
docs/: AUTO_FIX_GUIDE.md  GIT_VSCODE_AUTOMATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE_AUTO_FIX.md  VSCODE_SETTINGS_GUIDE.md
scripts/: README.md  autofix.py  check_version.py  dev.ps1
src/autonomous_dev/: __init__.py  example.py  learning.py  performance.py
tests/: test_example.py  test_learning.py  test_learning_extra.py  test_performance.py
